--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,48 @@
+html, body { 
+    margin: 0; 
+    height: 100%; 
+}
+
 #outer {
     position: relative;
+    margin: 0 auto;
 }
 
 #header {
-   border: 1px solid red;
-   height: 110px;
-   margin: 0;
+    border: 1px solid red;
+    height: auto;
+    margin: 0;
+    width: 100%;
 }
 
 #leftnav {
-   border: 4px solid black;
-   left: 50px;
-   width: 30px;
-   height: 70px;
-   position: absolute;
+    float: left;
+    width: 20%;
+    background: yellow;
+    margin-top: 0;
+    margin-right: 1.67em;
+    border-right: 3px solid black;
+    padding-top: 0;
+    padding-right: 1em;
+    padding-bottom: 20px;
+    height: 100%;
 }
 
 #maincontent {
-   border: 4px solid black;
-   width: 500px;
-   height: 70px;
-   position: absolute;
+    padding-left: 1.7em;
+    margin-top: 0;
+    padding-top: 0;
+    padding-left: 200px;
+    height: 100%;
 }
 
-#rightnav {
-   border: 4px solid black;
-   right: 50px;
-   width: 30px;
-   height: 70px;
-   float: right;
-   position: absolute;
-}
-
-#statusbar {
-    border: 5px solid red;
+#footer {
+    clear: both;
+    padding-bottom: 1em;
+    border-top: 1px solid #333;
+    text-align: center;
+    background: green;
+    position:fixed;
+    bottom:0;
+    width: 100%;
 }
